--- a/rottenpotatoes/app/views/movies/search_directors.html.haml
+++ b/rottenpotatoes/app/views/movies/search_directors.html.haml
@@ -1,18 +1,18 @@
-%h1 Movies that have the same director as @movie.title
+%h1 Movies that have the same director as the movie @movie.title
 
 %table#movies
   %thead
     %tr
       %th Movie Title
-      %th Rating
       %th Release Date
+      %th Rating
       %th More Info
   %tbody
     - @movies.each do |movie|
       %tr
         %td= movie.title
-        %td= movie.rating
         %td= movie.release_date
+        %td= movie.rating
         %td= link_to "More about #{movie.title}", movie_path(movie)
         
-= link_to 'Back to movie list', movies_path
+= link_to 'Back to movies', movies_path
